--- a/src/about/style.scss
+++ b/src/about/style.scss
@@ -190,6 +190,7 @@ $primaryColor: #4527a4;
     }
 
     .btn {
+      width: fit-content;
       --bs-btn-padding-x: 0.75rem;
       --bs-btn-padding-y: 0.375rem;
       --bs-btn-font-size: 1rem;
