--- a/src/faq/style.scss
+++ b/src/faq/style.scss
@@ -141,6 +141,10 @@
       
 
     }
+  // 
+  // .defaultThemeContainer{
+  //   background: transparent;
+  // }
 
     @media (max-width: 768px) {
       .faq-wrapper {
