--- a/src/ticker/style.scss
+++ b/src/ticker/style.scss
@@ -468,7 +468,8 @@ $primaryColor: #4527a4;
     
 }
 // .has-global-padding{
-// 	padding:0px !important;
+// 	padding-left:0px !important;
+// 	padding-right:0px !important;
 // }
 // .wp-block-post-content-is-layout-constrained{
 //   padding:0px !important;
