already problems solved

--- a/src/faq/editor.scss
+++ b/src/faq/editor.scss
@@ -120,12 +120,12 @@ $primaryColor: #4527a4;
     max-width: 150px;
   }
 }
-.btnPrimaryContainer {
+.custom-btnPrimaryContainer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.btn-primary {
+.custom-btn-primary{
   width: 100%;
   display: flex;
   align-items: center;
@@ -143,7 +143,7 @@ $primaryColor: #4527a4;
   margin-top: 15px;
 }
 
-.btn-icon {
+.custom-btn-icon {
   width: 16px;
   height: 16px;
   fill: none;
