--- a/src/ticker/style.scss
+++ b/src/ticker/style.scss
@@ -467,11 +467,13 @@ $primaryColor: #4527a4;
 
     
 }
-// .has-global-padding{
-// 	padding-left:0px !important;
-// 	padding-right:0px !important;
-// }
+.has-global-padding{
+	padding-left:0px !important;
+	padding-right:0px !important;
+  overflow:hidden !important;
+}
 // .wp-block-post-content-is-layout-constrained{
 //   padding:0px !important;
 
 // }
+// has-global-padding 
