--- a/src/ticker/style.scss
+++ b/src/ticker/style.scss
@@ -383,3 +383,21 @@ $primaryColor: #4527a4;
 	padding-right:0px !important;
   overflow:hidden !important;
 }
+
+// @media (min-width: 767px) {
+//   .has-global-padding{
+// 	padding-left:0px !important;
+// 	padding-right:0px !important;
+//   overflow:hidden !important;
+// }
+
+// }
+
+// @media (max-width: 767px) {
+//   .has-global-padding{
+// 	padding-left:30px !important;
+// 	padding-right:30px !important;
+//   overflow:hidden !important;
+// }
+
+// }
