--- a/src/team/style.scss
+++ b/src/team/style.scss
@@ -1084,6 +1084,10 @@ $primaryColor: #4527a4;
       // color: #5c6166;
     }
 
+    .team-description{
+      padding: 0px 5px 0px 5px;
+    }
+
     .container {
       padding-right: 15px;
       padding-left: 15px;
