all the complete for me

--- a/src/faq/style.scss
+++ b/src/faq/style.scss
@@ -15,6 +15,9 @@
 
       margin-top: 50px;
     }
+    .defaultThemeContainer{
+      padding: 30px !important;
+    }
 
     .heading {
       display: flex;
