--- a/src/feature-section/editor.scss
+++ b/src/feature-section/editor.scss
@@ -8,8 +8,8 @@ $primaryColor: #4527a4;
     font-weight: 700;
   }
 }
-
-.wp-block-b-blocks-feature-section {
+// wp-block-b-blocks-feature-section
+.wp-block-b-blocks-info-list {
 
   .span{
     font-size: 14px; 
